syntax = "proto3";

option go_package = "github.com/cligpt/shdrive/drive";

package drive;

service RpcProto {
  rpc SendChat (ChatRequest) returns (ChatReply) {}
  rpc SendQuery (QueryRequest) returns (QueryReply) {}
}

message ChatRequest {
  string model = 1;
  repeated ChatMessage messages = 2;
  string format = 3;
  ChatOption options = 4;
  bool stream = 5;
  string keepAlive = 6;
}

message ChatMessage {
  string role = 1;
  string content = 2;
}

message ChatOption {
  float temperature = 1;
}

message ChatReply {
  string model = 1;
  string createdAt = 2;
  ChatMessage message = 3;
  bool done = 4;
}

message QueryRequest {
  string name = 1;
  string arch = 2;
  string os = 3;
}

message QueryReply {
  string version = 1;
  string url = 2;
  string user = 3;
  string pass = 4;
}
